Services/Issue-Tracking-Backend/deployment.yaml
# ===========================
# Namespace
# ===========================
apiVersion: v1
kind: Namespace
metadata:
  name: issue-app-backend

---
# ===========================
# Postgres Deployment
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-app-backend-postgres
  namespace: issue-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-app-backend-postgres
  template:
    metadata:
      labels:
        app: issue-app-backend-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
# ===========================
# Postgres Service
# ===========================
apiVersion: v1
kind: Service
metadata:
  name: issue-app-backend-postgres-service
  namespace: issue-app-backend
spec:
  selector:
    app: issue-app-backend-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP

---
# ===========================
# issue-app-backend App Deployment
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-app-backend-app
  namespace: issue-app-backend
  labels:
    smart-restart.io/enabled: "true"         # Tells the engine to look at this app
  annotations:
    smart-restart.io/max-retries: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-app-backend
  template:
    metadata:
      labels:
        app: issue-app-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: issue-app-backend
          image: ghcr.io/tapandgo/issue-app-backend:d9622f73cd59d4059393849f891012583a98a242
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10

---
# ===========================
# issue-app-backend App Service
# ===========================
apiVersion: v1
kind: Service
metadata:
  name: issue-app-backend-service
  namespace: issue-app-backend
spec:
  selector:
    app: issue-app-backend
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30003
