Services/Issue-Tracking-Backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-app-backend-ingress
  namespace: issue-app-backend  # <--- CRITICAL: Must match your service namespace
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-global-ratelimit@kubernetescrd
spec:
  rules:
    - host: issues-backend.ordochao
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issue-app-backend-service
                port:
                  number: 3003
  tls:
    - hosts:
        - issues-backend.ordochao
      secretName: issue-app-backend-tls
